Bug 1606751 [Wayland] Manage opaque region of mozcontainer internally, r=heftig

nsWindow::UpdateOpaqueRegion() is used from Main thread and it collides with
moz_container_get_wl_surface() where opaque region is used and which is called from Compositor thread.

As a fix don't set opaque region directly for mozcontainer but rather just use a flag to signalize
there's an update needed and calculare/set the opaque region at moz_container_get_wl_surface() or
moz_container_egl_window_set_size().

Differential Revision: https://phabricator.services.mozilla.com/D58840

--HG--
extra : moz-landing-system : lando