widget/gtk/mozcontainer.h
@@ -78,9 +78,10 @@ struct _MozContainer {
   struct wl_subsurface* subsurface;
   int subsurface_dx, subsurface_dy;
   struct wl_egl_window* eglwindow;
-  struct wl_region* opaque_region;
   struct wl_callback* frame_callback_handler;
   int frame_callback_handler_surface_id;
+  gboolean opaque_region_needs_update;
+  gboolean opaque_region_subtract_corners;
   gboolean surface_position_needs_update;
   gboolean surface_needs_clear;
   gboolean ready_to_draw;
@@ -115,8 +116,8 @@ void moz_container_scale_changed(MozContainer* container,
 void moz_container_add_initial_draw_callback(
     MozContainer* container, const std::function<void(void)>& initial_draw_cb);
 wl_surface* moz_gtk_widget_get_wl_surface(GtkWidget* aWidget);
-void moz_container_set_opaque_region(MozContainer* container,
-                                     wl_region* opaque_region);
+void moz_container_update_opaque_region(MozContainer* container,
+                                        bool aSubtractCorners);
 #endif
 
 #endif /* __MOZ_CONTAINER_H__ */
